功能完善与优化

--- a/TestAPI/NLog.config
+++ b/TestAPI/NLog.config
@@ -13,7 +13,7 @@
 		<!-- write logs to file -->
 		<target name="file" xsi:type="AsyncWrapper" queueLimit="5000" overflowAction="Discard">
 			<target xsi:type="File" fileName="${basedir}/Logs/${shortdate}.txt" maxArchiveFiles="30000"
-					layout="${longdate}|${level:uppercase=true}|message::${message}|exception::${onexception:${exception:format=tostring}}|stacktrace::${stacktrace}" />
+					layout="${longdate}|${level:uppercase=true}|message：${message}${onexception:|exception：${exception:format=tostring}|stacktrace：${stacktrace}}" />
 		</target>
 
 		<!-- write logs to file -->
@@ -22,13 +22,47 @@
 					layout="${longdate}|${level:uppercase=true}|message::${message}|exception::${onexception:${exception:format=tostring}}|stacktrace::${stacktrace}" />
 		</target>
 
+		<!-- write log message to database -->
+		<target name="db" xsi:type="AsyncWrapper" queueLimit="5000" overflowAction="Discard">
+			<!-- 创建日志表SQL脚本
+			  CREATE TABLE `logs`  (
+				`ID` bigint(0) NOT NULL AUTO_INCREMENT COMMENT '自增主键',
+				`ServiceCode` varchar(64) NOT NULL COMMENT '服务编码',
+				`LogTime` datetime(0) NOT NULL COMMENT '日志时间',
+				`Level` varchar(8) NOT NULL COMMENT '日志级别',
+				`Message` varchar(1024) NOT NULL COMMENT '日志信息',
+				`OnException` varchar(512) NOT NULL DEFAULT '' COMMENT '异常消息',
+				`StackTrace` varchar(2048) NOT NULL DEFAULT '' COMMENT '堆栈跟踪',
+				PRIMARY KEY (`ID`)
+			  );
+			  -->
+
+			<target type="Database"
+					dbProvider="MySql.Data.MySqlClient.MySqlConnection, MySql.Data"
+					connectionString="${gdc:item=dbConnectionString}">
+
+				<commandText>
+					INSERT INTO logs (ServiceCode,LogTime,Level,Message,OnException,StackTrace) VALUES(@ServiceCode, @LogTime, @Level, @Message, @OnException, @StackTrace);
+				</commandText>
+
+				<!-- database connection parameters -->
+				<parameter name="@ServiceCode" layout="${var:serviceCode:default=unknown}" />
+				<parameter name="@LogTime" layout="${longdate}" />
+				<parameter name="@Level" layout="${level:uppercase=true}" />
+				<parameter name="@Message" layout="${message}" />
+				<parameter name="@OnException" layout="${onexception:${exception:format=tostring}" />
+				<parameter name="@StackTrace" layout="${stacktrace}" />
+			</target>
+		</target>
+
 	</targets>
 	<rules>
 		<!--<logger name="*" minlevel="Debug" writeTo="console" />-->
 
 		<!-- Trace|Debug|Info|Warn|Error|Fatal -->
-		<logger name="*" minlevel="Info" maxlevel="Fatal" writeTo="file" />
+		<logger name="*" minlevel="Trace" maxlevel="Fatal" writeTo="file" />
 		<logger name="*" minlevel="Error" maxlevel="Fatal" writeTo="errorfile" />
 
+		<logger name="*" minlevel="Trace" writeTo="db" />
 	</rules>
 </nlog>
