--- a/TestAPI/appsettings.json
+++ b/TestAPI/appsettings.json
@@ -6,5 +6,16 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "Consul": {
+    "IP": "127.0.0.1",
+    "Port": 8500,
+    "ServiceCode": "TestAPI"
+  },
+  "Kestrel": {
+    "EndPoints": {
+      "Server": {
+        "Url": "http://*:19002" //±¾·þÎñurl
+      }
+    }
+  }
 }
