功能完善和优化

--- a/TestAPI/NLog.config
+++ b/TestAPI/NLog.config
@@ -5,7 +5,7 @@
       throwExceptions="false"
       internalLogLevel="Off"
       internalLogFile="${basedir}/Logs/nlog.log" >
-	<!-- internalLogLevel值：Off|Trace|Debug|Info|Warn|Error|Fatal -->
+	<!-- internalLogLevel值：Trace|Debug|Info|Warn|Error|Fatal|Off -->
 
 	<targets>
 		<!--<target name="console" xsi:type="Console" />-->
@@ -13,13 +13,13 @@
 		<!-- write logs to file -->
 		<target name="file" xsi:type="AsyncWrapper" queueLimit="5000" overflowAction="Discard">
 			<target xsi:type="File" fileName="${basedir}/Logs/${shortdate}.txt" maxArchiveFiles="30000"
-					layout="${longdate}|${level:uppercase=true}|message：${message}${onexception:|exception：${exception:format=tostring}|stacktrace：${stacktrace}}" />
+					layout="${longdate}|${level:uppercase=true}|message：${message}${onexception:|exception：${exception:format=tostring}}" />
 		</target>
 
 		<!-- write logs to file -->
 		<target name="errorfile" xsi:type="AsyncWrapper" queueLimit="5000" overflowAction="Discard">
 			<target xsi:type="File" fileName="${basedir}/Logs/${shortdate}_error.txt" maxArchiveFiles="30000"
-					layout="${longdate}|${level:uppercase=true}|message::${message}|exception::${onexception:${exception:format=tostring}}|stacktrace::${stacktrace}" />
+					layout="${longdate}|${level:uppercase=true}|message：${message}${onexception:|exception：${exception:format=tostring}}" />
 		</target>
 
 		<!-- write log message to database -->
@@ -32,7 +32,7 @@
 				`Level` varchar(8) NOT NULL COMMENT '日志级别',
 				`Message` varchar(1024) NOT NULL COMMENT '日志信息',
 				`OnException` varchar(512) NOT NULL DEFAULT '' COMMENT '异常消息',
-				`StackTrace` varchar(2048) NOT NULL DEFAULT '' COMMENT '堆栈跟踪',
+				`StackTrace` text NOT NULL DEFAULT '' COMMENT '堆栈跟踪',
 				PRIMARY KEY (`ID`)
 			  );
 			  -->
@@ -50,8 +50,8 @@
 				<parameter name="@LogTime" layout="${longdate}" />
 				<parameter name="@Level" layout="${level:uppercase=true}" />
 				<parameter name="@Message" layout="${message}" />
-				<parameter name="@OnException" layout="${onexception:${exception:format=tostring}" />
-				<parameter name="@StackTrace" layout="${stacktrace}" />
+				<parameter name="@OnException" layout="${onexception:${exception:format=message}}" />
+				<parameter name="@StackTrace" layout="${onexception:${exception:format=tostring}}" />
 			</target>
 		</target>
 
@@ -63,6 +63,6 @@
 		<logger name="*" minlevel="Trace" maxlevel="Fatal" writeTo="file" />
 		<logger name="*" minlevel="Error" maxlevel="Fatal" writeTo="errorfile" />
 
-		<logger name="*" minlevel="Trace" writeTo="db" />
+		<logger name="*" minlevel="Trace" maxlevel="Fatal" writeTo="db" />
 	</rules>
 </nlog>
