--- a/tdb.framework.webapi/tdb.framework.webapi.csproj
+++ b/tdb.framework.webapi/tdb.framework.webapi.csproj
@@ -1,11 +1,24 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <Version>5.0.0.1</Version>
+    <Authors>tangdabin</Authors>
+    <Company>tdb</Company>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageTags>tdb</PackageTags>
+    <PackageReleaseNotes>webapi框架</PackageReleaseNotes>
+    <Description>webapi框架</Description>
+    <PackageProjectUrl>https://github.com/dabintang/tdb.framework</PackageProjectUrl>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>E:\tdb\github\svn\tdb.framework\tdb.framework.webapi\tdb.framework.webapi.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.0.0" />
     <PackageReference Include="tdb.appsettings" Version="2.1.0.1" />
     <PackageReference Include="tdb.consul.kv" Version="2.1.0.3" />
     <PackageReference Include="tdb.csredis" Version="2.1.0.2" />
