--- a/tdb.framework.webapi/tdb.framework.webapi.csproj
+++ b/tdb.framework.webapi/tdb.framework.webapi.csproj
@@ -1,28 +1,29 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <Version>5.0.0.1</Version>
+    <TargetFramework>netstandard2.1</TargetFramework>
+    <Version>2.1.0.6</Version>
     <Authors>tangdabin</Authors>
     <Company>tdb</Company>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageTags>tdb</PackageTags>
-    <PackageReleaseNotes>webapi框架</PackageReleaseNotes>
     <Description>webapi框架</Description>
+    <PackageReleaseNotes>webapi框架</PackageReleaseNotes>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/dabintang/tdb.framework</PackageProjectUrl>
+    <PackageTags>tdb</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>E:\tdb\github\svn\tdb.framework\tdb.framework.webapi\tdb.framework.webapi.xml</DocumentationFile>
-  </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.0.0" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.0.7" />
     <PackageReference Include="tdb.appsettings" Version="2.1.0.1" />
     <PackageReference Include="tdb.consul.kv" Version="2.1.0.3" />
     <PackageReference Include="tdb.csredis" Version="2.1.0.2" />
-    <PackageReference Include="tdb.nlog.mysql" Version="2.1.0.3" />
+    <PackageReference Include="tdb.nlog.mysql" Version="2.1.0.4" />
   </ItemGroup>
+  
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+  </PropertyGroup>
 
 </Project>
