功能优化与完善

--- a/TestAPI/TestAPI.csproj
+++ b/TestAPI/TestAPI.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\tdb.framework.webapi\tdb.framework.webapi.csproj" />
   </ItemGroup>
 </Project>
