--- a/tdb.framework.webapi/tdb.framework.webapi.csproj
+++ b/tdb.framework.webapi/tdb.framework.webapi.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <Version>2.1.0.11</Version>
+    <Version>2.1.0.18</Version>
     <Authors>tangdabin</Authors>
     <Company>tdb</Company>
     <Description>webapi框架</Description>
@@ -14,8 +14,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.2.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.2" />
+    <PackageReference Include="Autofac.Extras.DynamicProxy" Version="6.0.0" />
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="5.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
     <PackageReference Include="tdb.appsettings" Version="2.1.0.2" />
     <PackageReference Include="tdb.consul.kv" Version="2.1.0.3" />
     <PackageReference Include="tdb.csredis" Version="2.1.0.3" />
