--- a/tdb.framework.webapi/tdb.framework.webapi.csproj
+++ b/tdb.framework.webapi/tdb.framework.webapi.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <Version>2.1.0.18</Version>
+    <Version>2.1.0.20</Version>
     <Authors>tangdabin</Authors>
     <Company>tdb</Company>
     <Description>webapi框架</Description>
@@ -21,9 +21,11 @@
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
     <PackageReference Include="tdb.appsettings" Version="2.1.0.2" />
-    <PackageReference Include="tdb.consul.kv" Version="2.1.0.3" />
+    <PackageReference Include="tdb.common" Version="2.1.0.6" />
+    <PackageReference Include="tdb.consul.kv" Version="2.1.0.4" />
+    <PackageReference Include="tdb.consul.services" Version="2.1.0.3" />
     <PackageReference Include="tdb.csredis" Version="2.1.0.3" />
-    <PackageReference Include="tdb.nlog.mysql" Version="2.1.0.5" />
+    <PackageReference Include="tdb.nlog.mysql" Version="2.1.0.6" />
   </ItemGroup>
   
   <PropertyGroup>
