--- a/tdb.framework.webapi/tdb.framework.webapi.csproj
+++ b/tdb.framework.webapi/tdb.framework.webapi.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <Version>2.1.0.20</Version>
+    <Version>2.1.0.21</Version>
     <Authors>tangdabin</Authors>
     <Company>tdb</Company>
     <Description>webapi框架</Description>
@@ -18,6 +18,8 @@
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
     <PackageReference Include="Autofac.Extras.DynamicProxy" Version="6.0.0" />
     <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="HttpReports" Version="2.5.14" />
+    <PackageReference Include="HttpReports.Transport.Http" Version="2.5.14" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
     <PackageReference Include="tdb.appsettings" Version="2.1.0.2" />
