--- a/tdb.framework.webapi.standard/tdb.framework.webapi.standard.csproj
+++ b/tdb.framework.webapi.standard/tdb.framework.webapi.standard.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <Version>2.1.0.1</Version>
+    <Version>2.1.1.1</Version>
     <Authors>tangdabin</Authors>
     <Company>tdb</Company>
     <Description>tdb webapi 框架标准库</Description>
@@ -15,19 +15,20 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="6.3.0" />
-    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.2.0" />
     <PackageReference Include="Autofac.Extras.DynamicProxy" Version="6.0.0" />
-    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="AutoMapper" Version="11.0.0" />
     <PackageReference Include="HttpReports" Version="2.6.3" />
     <PackageReference Include="HttpReports.Transport.Http" Version="2.6.3" />
-    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-    <PackageReference Include="tdb.appsettings" Version="2.1.0.4" />
-    <PackageReference Include="tdb.common" Version="2.1.0.11" />
-    <PackageReference Include="tdb.consul.kv" Version="2.1.0.5" />
-    <PackageReference Include="tdb.consul.services" Version="2.1.0.4" />
-    <PackageReference Include="tdb.csredis" Version="2.1.0.3" />
-    <PackageReference Include="tdb.nlog.mysql" Version="2.1.0.8" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.0" />
+    <PackageReference Include="tdb.appsettings" Version="2.1.1" />
+    <PackageReference Include="tdb.common" Version="2.1.1" />
+    <PackageReference Include="tdb.consul.kv" Version="2.1.1" />
+    <PackageReference Include="tdb.consul.services" Version="2.1.1" />
+    <PackageReference Include="tdb.csredis" Version="2.1.1" />
+    <PackageReference Include="tdb.nlog.mysql" Version="2.1.1" />
   </ItemGroup>
 
   <PropertyGroup>
